<resources>
    <string name="app_name">Owly</string>

    <!-- Register & Login -->
    <string name="join_owly">Join Owly</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Email</string>
    <string name="register">Register</string>
    <string name="already_registered">Already one of us?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="resend_email">Resend Confirmation Email</string>
</resources>
