<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/register_activity"
    tools:context="com.app.owly.login.RegisterActivity">


    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/register"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="128dp" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</android.widget.RelativeLayout>
